--- a/site/index.html
+++ b/site/index.html
@@ -1,10 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Hello Coursera</title>
+	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
 <h1>Hello coursera</h1> 
-<h2>Great day today!</h2>
+<div class="row">
+	<div class="col-lg-6 col-md-3"><p>sdfsdfdfdsfsdfs</p></div>
+	<div class="col-lg-6 col-md-3"><p>sdfsdfdfdsfsdfs</p></div>
+	<div class="col-lg-6 col-md-3"><p>sdfsdfdfdsfsdfs</p></div>
+
+	<div class="col-lg-6 col-md-3"><p>sdfsdfdfdsfsdfs</p></div>
+	<div class="col-lg-6 col-md-3"><p>sdfsdfdfdsfsdfs</p></div>
+	<div class="col-lg-6 col-md-3"><p>sdfsdfdfdsfsdfs</p></div>
+	<div class="col-lg-6 col-md-3"><p>sdfsdfdfdsfsdfs</p></div>
+	<div class="col-lg-6 col-md-3"><p>sdfsdfdfdsfsdfs</p></div>
+</div>
+<h2>Great day today! Am I right?  </h2>
 </body>
 </html>
